butoon alignment fixed

--- a/styyle.css
+++ b/styyle.css
@@ -125,9 +125,9 @@ h1{
 }
 
 .experience-area {
-    padding-top: 3%;
+    padding-top: 2%;
     text-align: center;
-    height: 450px;
+    height: 460px;
     background-color:  #F6F6F6  ;
 }
 .single-posts{
@@ -157,10 +157,11 @@ h1{
     background-origin: padding-box, border-box;
     
 }
-/*.read-more a{
-    color: white;
-    margin-top: 50px;
-} */
+.read-more{
+    padding-top: 18%;
+    margin: auto;
+
+}
 .post-button{
     text-decoration: none;
     background-image: linear-gradient(45deg, cyan, blue);
@@ -170,6 +171,8 @@ h1{
     font-size: 16px;
     font-weight: 500;
     color: white;  
+
+  
 }
 
 footer{
